--- a/wikipedia_scrape.ipynb
+++ b/wikipedia_scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "d4a39495-aef2-444e-8378-9c26273bd4da",
    "metadata": {
     "tags": []
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a80735c2-7b85-4601-a778-b3d219e6f9cc",
    "metadata": {
     "tags": []
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "71a045c6-3964-4fe9-aabb-d96d39411c19",
    "metadata": {
     "tags": []
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2930d90f-f1fb-48e1-87f4-01e33eded8be",
    "metadata": {
     "tags": []
@@ -166,12 +166,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b662eb2b-bdd4-4d19-925f-6234093611a0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>lived_abroad</th>\n",
+       "      <th>year_abroad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A: Kim Jong-unCategory</td>\n",
+       "      <td>.A: Yes</td>\n",
+       "      <td>.A: yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A: Augusto Pinochet</td>\n",
+       "      <td>. yesQ</td>\n",
+       "      <td>. no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     name lived_abroad year_abroad\n",
+       "0  A: Kim Jong-unCategory      .A: Yes     .A: yes\n",
+       "1     A: Augusto Pinochet       . yesQ        . no"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "leader_df"
    ]
