--- a/wikipedia_scrape.ipynb
+++ b/wikipedia_scrape.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "71a045c6-3964-4fe9-aabb-d96d39411c19",
    "metadata": {
     "tags": []
@@ -94,7 +94,7 @@
     "# Specify the title of the Wikipedia page\n",
     "\n",
     "\n",
-    "leader_names= ['Kim Jong Un', 'Augusto Pinochet']\n",
+    "leader_names= ['Kim Jong Un', 'Augusto Pinochet', 'Omar al-Bashir']\n",
     "\n",
     "\n",
     "wiki_list = []\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "2930d90f-f1fb-48e1-87f4-01e33eded8be",
    "metadata": {
     "tags": []
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "b662eb2b-bdd4-4d19-925f-6234093611a0",
    "metadata": {
     "tags": []
@@ -211,6 +211,12 @@
        "      <td>. yesQ</td>\n",
        "      <td>. no</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A: Omar al-Bashir</td>\n",
+       "      <td>. yes</td>\n",
+       "      <td>.:no</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -218,10 +224,11 @@
       "text/plain": [
        "                     name lived_abroad year_abroad\n",
        "0  A: Kim Jong-unCategory      .A: Yes     .A: yes\n",
-       "1     A: Augusto Pinochet       . yesQ        . no"
+       "1     A: Augusto Pinochet       . yesQ        . no\n",
+       "2       A: Omar al-Bashir        . yes        .:no"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
